<resources>
    <string name="app_name">LazherMe</string>
    <string name="sign_in_text">Connexion</string>
    <string name="not_signed_up_text">Pas encore membre ? Creer un compte</string>
    <string name="sign_up_text">S\'enregister</string>
    <string name="deja_enregistre_text">Deja membre ? Se connecter</string>
    <string name="type_your_email">Votre adresse e-mail</string>
    <string name="type_your_password">Votre mot de passe</string>
    <string name="retype_your_password">Retapez votre mot de passe</string>
    <string name="ble_scan_play">Lancer le scan</string>
    <string name="ble_scan_pause">Scan BLE en cours …</string>
    <string name="ble_scan_error">BLE non disponique sur cet appareil</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="creer_partie">Creer une partie</string>
    <string name="rejoindre_partie">Rejoindre une partie</string>
    <string name="btn_rejoindre">Rejoindre</string>
    <string name="equipe_rouge">Team Rouge</string>
    <string name="equipe_bleu">Team Bleue</string>
    <string name="MME">MME</string>
    <string name="FFA">FFA</string>
    <string name="durree">Durée (min) :</string>
    <string name="nombre_de_joueurs">Nombre de joueurs :</string>
    <string name="mode_de_jeu">Mode de jeu :</string>
    <string name="creer">Creer</string>
    <string name="saisissez_le_code">Saisissez le code</string>
    <string name="temps_max">Temps : %1$s min</string>
    <string name="mode_jeu">Mode : %1$s </string>
    <string name="joueurs_max">Joueurs : %1$s/%2$s </string>
    <string name="code_de_la_partie">Code de la partie :</string>
    <string name="aucune_partie_r_cente">Aucune partie récente</string>
    <string name="historique_des_parties">Historique des parties</string>
</resources>