<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.CreateFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="75dp"
        android:fontFamily="@font/bebas_neue"
        android:text="Créer une partie"
        android:textColor="@color/dark_grey"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/mode_de_jeu"
        android:textColor="@color/dark_grey"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/nombre_de_joueurs"
        android:textColor="@color/dark_grey"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/durree"
        android:textColor="@color/dark_grey"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />
    <ImageView
        android:id="@+id/boutonModeGauche"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_baseline_chevron_left_24"
        app:layout_constraintBottom_toBottomOf="@+id/texteMode"
        app:layout_constraintEnd_toStartOf="@+id/texteMode"
        app:layout_constraintTop_toTopOf="@+id/texteMode" />

    <TextView
        android:id="@+id/texteMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/blinker"
        android:text="TextView"
        android:textColor="@color/purple_dark"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="@+id/texteNombre"
        app:layout_constraintStart_toStartOf="@+id/texteNombre"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <ImageView
        android:id="@+id/boutonModeDroite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:src="@drawable/ic_baseline_chevron_right_24"        app:layout_constraintBottom_toBottomOf="@+id/texteMode"
        app:layout_constraintStart_toEndOf="@+id/texteMode"
        app:layout_constraintTop_toTopOf="@+id/texteMode" />

    <ImageView
        android:id="@+id/boutonNombreGauche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_baseline_chevron_left_24"
        app:layout_constraintBottom_toBottomOf="@+id/texteNombre"
        app:layout_constraintEnd_toStartOf="@+id/texteNombre"
        app:layout_constraintTop_toTopOf="@+id/texteNombre" />

    <TextView
        android:id="@+id/texteNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/blinker"
        android:textColor="@color/purple_dark"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5"
        tools:text="TextView" />

    <ImageView
        android:id="@+id/boutonNombreDroite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:src="@drawable/ic_baseline_chevron_right_24"
        app:layout_constraintBottom_toBottomOf="@+id/texteNombre"
        app:layout_constraintStart_toEndOf="@+id/texteNombre"
        app:layout_constraintTop_toTopOf="@+id/texteNombre" />

    <ImageView
        android:id="@+id/boutonTempsGauche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_baseline_chevron_left_24"
        app:layout_constraintBottom_toBottomOf="@+id/texteTemps"
        app:layout_constraintEnd_toStartOf="@+id/texteTemps"
        app:layout_constraintTop_toTopOf="@+id/texteTemps" />

    <TextView
        android:id="@+id/texteTemps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/blinker"
        android:textColor="@color/purple_dark"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="@+id/texteNombre"
        app:layout_constraintStart_toStartOf="@+id/texteNombre"
        app:layout_constraintTop_toTopOf="@+id/textView6"
        tools:text="TextView" />

    <ImageView
        android:id="@+id/boutonTempsDroite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:src="@drawable/ic_baseline_chevron_right_24" app:layout_constraintBottom_toBottomOf="@+id/texteTemps"
        app:layout_constraintStart_toEndOf="@+id/texteTemps"
        app:layout_constraintTop_toTopOf="@+id/texteTemps" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/purple_dark"
        android:fontFamily="@font/blinker"
        android:text="@string/creer"
        android:layout_height="60dp"
        app:cornerRadius="5dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texteTemps" />
</androidx.constraintlayout.widget.ConstraintLayout>